# air-gap-signer

./: .gitignore  404.html  Cargo.toml  NAVIGATION.md  README.md  flake.nix  generate_gerbers.prompt.md  generate_gerbers.py  index.html  justfile  mkdocs.yml  sitemap.xml
.claude/commands/: electronics.md
.github/workflows/: ci.yml  docs.yml
architecture/overview/: index.html
architecture/secure-element/: index.html
architecture/signing-spec/: index.html
architecture/usb-protocol/: index.html
architecture/wasm-sandbox/: index.html
crates/signer-core/: Cargo.toml
crates/signer-core/src/: crypto.rs  display.rs  keystore.rs  lib.rs  spec.rs  wasm_sandbox.rs
crates/signer-core/tests/: wasm_integration.rs
crates/signer-hal/: Cargo.toml
crates/signer-hal/src/: lib.rs
crates/signer-sim/: Cargo.toml
crates/signer-sim/src/: buttons.rs  display.rs  flow.rs  keystore.rs  main.rs  usb.rs
crates/usb-pack/: Cargo.toml
crates/usb-pack/src/: main.rs
dev/getting-started/: index.html
dev/phases/: index.html
docs/: index.md
docs/architecture/: comparison.md  overview.md  secure-element.md  signing-spec.md  usb-protocol.md  wasm-sandbox.md
docs/dev/: getting-started.md  phases.md
hardware/SE050_breakout/: SE050_breakout_BOM.csv  SE050_breakout_CPL.csv  generate_gerbers.prompt.md  generate_gerbers.py  generate_schematic.py
interpreters/echo-hex/: Cargo.toml
interpreters/echo-hex/src/: lib.rs
search/: search_index.json
