[workspace]
resolver = "2"
members = [
    "crates/signer-core",
    "crates/signer-hal",
    "crates/usb-pack",
    "interpreters/echo-hex",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasmtime = { version = "28", default-features = false, features = ["cranelift", "runtime"] }
blake2 = "0.10"
sha2 = "0.10"
sha3 = "0.10"

[profile.release]
lto = true
strip = true
codegen-units = 1
