[package]
name = "signer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure logic — spec types, WASM sandbox, hash extraction, display"

[dependencies]
ciborium.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
blake2.workspace = true
sha2.workspace = true
sha3.workspace = true

[dev-dependencies]
hex = "0.4"
